<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="none"></string>
    <string name="app_name">电子菜单10寸单机版</string>
    <string name="kaitai">开台</string>
    <string name="updateMenu">更新菜谱</string>
    <string name="configer">配置</string>
    <string name="manual">版权信息</string>
    <string name="banben">版本号：V1.4</string>
    <string name="english">Copyright Information</string>
    <string name="info1">科大微龙A4010电子菜单终端应用软件</string>
    <string name="complan">苏州科大微龙信息技术有限公司</string>
    <string name="phone">地址：江苏省苏州市高新区竹园路209号&#160;&#160;电话：0512&#8211;65090098&#160;&#160;传真：0512&#8211;65090998</string>
    <string name="chooseconfiger">请选择需要配置的选项</string>
    <string name="isuser">是否启用</string>
    <string name="prompt">请选择一个大厅:</string>
    <string name="printerconfig">打印机配置</string>
    <string name="searchorder">查询订单</string>
    <string name="waiterNum">服务工号：</string>
    <string name="password">服务密码：</string>
    <string name="tableID">餐桌编号：</string>
    <string name="peopleNum">入座人数：</string>
    <string name="cancle">取消</string>
    <string name="welcome">书香世家</string>
    <string name="tips">书香世家欢迎您，点菜请翻页！！！</string>
    <string name="shuxiang">书香世家电子菜谱系统</string>
    <string name="commit">确定</string>
    <string name="printer1">打印机1IP地址：</string>
    <string name="printer2">打印机2IP地址：</string>
    <string name="printer3">打印机3IP地址：</string>
    <string name="printer4">打印机4IP地址：</string>
    <string name="printer5">打印机5IP地址：</string>
    <string name="printer6">打印机6IP地址：</string>
    <string name="serverIP">服务器IP地址：</string>
    <string name="port">端口：</string>
    <string name="separator">-</string>
    <string name="serverConfiger">服务器配置</string>
    <string name="updating">正在为您更新，请稍等···</string>
    <string name="callserver">呼叫服务</string>
    <string name="cool">冷&#160;&#160;&#160;&#160;菜</string>
    <string name="hot">热&#160;&#160;&#160;&#160;菜</string>
    <string name="seafood">海&#160;&#160;&#160;&#160;鲜</string>
    <string name="hotpot">火&#160;&#160;&#160;&#160;锅</string>
    <string name="soup">汤&#160;&#160;&#160;&#160;类</string>
    <string name="recommend">推荐菜</string>
    <string name="special">特色菜</string>
    <string name="wine">酒&#160;&#160;&#160;&#160;水</string>
    <string name="yidian">已点菜品</string>
    <string name="jieshu">结束点菜</string>
    <string name="shangyiye">上一页</string>
    <string name="xiayiye">下一页</string>
    <string name="search">搜索</string>
    <string name="searchTips">输入菜名进行搜索</string>
    <string name="foodlist">已点菜品清单</string>
    <string name="orderlist">订单列表</string>
    <string name="orderid">订单ID</string>
    <string name="tableid">桌台ID</string>
    <string name="waiterid">服务ID</string>
    <string name="totalprice">总额</string>
    <string name="time">下单时间</string>
    <string name="operator">操作</string>
    <string name="no_server">没有服务器，不需要配置服务器！！！</string>
    <string name="continuediancai">续点</string>
    <string name="addrequest">添加要求</string>
    <string name="addrequesttips">请输入菜品要求</string>
    <string name="foodname">菜名</string>
    <string name="request">要求</string>
    <string name="beizhu">备注</string>
    <string name="price">单价</string>
    <string name="foodnum">数量</string>
    <string name="total">合计</string>
    <string name="state">状态</string>
    <string name="delete">删除</string>
    <string name="tips1">您共点了</string>
    <string name="tips2">道菜</string>
    <string name="tips3">原价共计</string>
    <string name="tips5">现价共计</string>
    <string name="tips4">元</string>
    <string name="xiadan">下单</string>
    <string name="clearall">全部清空</string>
    <string name="back">返回</string>
    <string name="back2">返&#160;&#160;&#160;回</string>
    <string name="diancai">点菜</string>
    <string name="introduction">菜品简介</string>
    <string name="jianjie">&#160;&#160;&#160;&#160;&#160;&#160;书香文化主题连锁酒店集传统与现代、古典与时尚、婉约与华贵为一体，以2500年绵延深厚的吴文化为底蕴，融入了苏州古典园林和建筑之古韵遗风， 倡导“体验生活，品味文化”的现代生活理念，借鉴国际主题酒店的经营理念，以“斯是陋室、唯吾德馨”为境界，融入“恬淡中和、翰墨飘香”的苏州人文精神，是繁华都市中宁静致远的一方净土.\n&#160;&#160;&#160;&#160;&#160;&#160;公司先后获得《苏州市服务质量奖》、《中国优秀企业形象单位》、《中国十佳创意酒店》、《亚洲品牌创新奖》、《中国最具有成长力服务品牌企业》、 《全国百家特许经营推荐品牌》、《世界酒店.最具发展价值酒店连锁品牌》、《2011中国国际旅游赛博会旅游职业装金奖》、《中国品牌文化建设50强》、 《中国企业形象管理十强》、《“十二五”期间中国最具投资价值企业》、《苏州市知名字号》、《江苏服务业名牌》、《江苏省著名商标》、 《全球酒店业最佳主题文化酒店金樽奖》等多项荣誉和称号。\n&#160;&#160;&#160;&#160;&#160;&#160;书香酒店集团拥有“书香世家会所酒店”、“书香门第商务酒店”、“书香人家青年旅舍”三大系列品牌。 现管理23家酒店。其中：有座落在苏州古典园林——半园的五星级书香世家平江府和座落在江苏大丰国家湿地公园的五星级书香世家大丰店， 有具备温泉度假功能的四星级树山书香世家酒店，有承担过世博会指定接待任务的四星级上海书香世家酒店。\n&#160;&#160;&#160;&#160;&#160;&#160;“书香”来源于博大精深的华夏文明，植根于中国文人文化的清逸、优雅。 “书香”的灵感源自宅园合一的苏州古典园林，可赏、可游、可居。 “书香”追求的是营造身心愉悦、诗情画意的起居空间，呈现身心合一的和谐之美。 “书香” 的奢华是一种意境，摒弃熙攘都市带来的浮躁，让宾客感受世外桃源的境界。</string>
    <string name="register">请输入注册码</string>
	<string name="tishi">|&#160;提&#160;&#160;&#160;&#160;示&#160;|</string>
</resources>