<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/configer_ll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_con_dialog" >

    <LinearLayout
        android:layout_width="471px"
        android:layout_height="289px"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/configdialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:src="@drawable/fzdh" />

        <Button
            android:id="@+id/btn_serverconfig"
            style="@style/configerdialog_btn"
            android:layout_marginTop="65dp"
            android:background="@drawable/btn_server"
            android:text="@string/serverConfiger" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_server"
            android:textColor="#000"
            android:textSize="7.82px"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_printerconfig"
            style="@style/configerdialog_btn"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_printer"
            android:text="@string/printerconfig" />
    </LinearLayout>

</FrameLayout>